learning const cast in dom

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+
+        <input type="text" class="userName" value="amir">
+        <button class="btn">aa</button>
+
     
     <script src="./app.js"></script>
 </body>
