--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
-        <input type="text" class="userName" value="amir">
-        <button class="btn">aa</button>
-
     
-    <script src="./app.js"></script>
+    <script type="module" src="./dist/test.js"></script>
 </body>
 </html>
